feat: add destroy car
