# docs/swagger.yaml
@@ -143,6 +143,37 @@ definitions:
     - model
     - transportType
     type: object
+  entities.Transport:
+    properties:
+      canBeRented:
+        type: boolean
+      color:
+        type: string
+      created_at:
+        type: string
+      dayPrice:
+        type: number
+      description:
+        type: string
+      id:
+        type: integer
+      identifier:
+        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
+      minutePrice:
+        type: number
+      model:
+        type: string
+      ownerId:
+        type: integer
+      transportType:
+        type: string
+      updated_at:
+        type: string
+    type: object
   entities.User:
     properties:
       balance:
@@ -783,6 +814,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/entities.Transport'
         "404":
           description: Not Found
         "500":
